# Aviation-topic-pipeline

./: .dockerignore  .env.example  .gitignore  DATASET_CARD.md  Dockerfile  Dockerfile.light  LICENSE  MODEL_CARD.md  README.md  models.dvc  my-artifacts.dvc  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-prod.txt
.dvc/: config
app/: config.py  main.py  schemas.py  services.py  streamlit_app.py
aviation-topic-pipeline/mlruns/0/: meta.yaml
aviation-topic-pipeline/mlruns/460669144509802044/: meta.yaml
data/: processed.dvc  raw.dvc
mlruns/0/: meta.yaml
mlruns/0/0700ad710fc04332b009e3eaa07b232d/: meta.yaml
mlruns/0/09a41bf226de4824bee85b7e66014b86/: meta.yaml
mlruns/0/0c7da79f69b94943b9a4bfea886f86b2/: meta.yaml
mlruns/0/5c66daef1bf44d3eaa73d22973d02984/: meta.yaml
mlruns/0/648a04ca541e4818b0735eff22b3e6a5/: meta.yaml
mlruns/0/89cf13b7870f4e99b60b68aaa5742315/: meta.yaml
mlruns/0/8cdfbae8691f4e29b0e240c70e2d84a7/: meta.yaml
mlruns/0/a547899cbb1b40fea01d4e7d9004e887/: meta.yaml
mlruns/0/aeacf7d3ccac4da485cea1b7db5dcff8/: meta.yaml
mlruns/0/b7f35fe841fb4f66aa9371ebd4417bec/: meta.yaml
mlruns/0/eeaea699ca864b06a02c6dc1a89fe60d/: meta.yaml
mlruns/0/fa52f1051cec4abcbd22d04228c34b21/: meta.yaml
mlruns/307744178423469694/: meta.yaml
mlruns/307744178423469694/0188e71829a446c5a690898d60fed938/: meta.yaml
mlruns/307744178423469694/02ad5327c445448492666df350124a63/: meta.yaml
mlruns/307744178423469694/04826dd70db2431181649fcbc82c62bd/: meta.yaml
mlruns/307744178423469694/05c97c5853b84992ae3329ebdc497565/: meta.yaml
mlruns/307744178423469694/060367a58b3b47769b428b8012678127/: meta.yaml
mlruns/307744178423469694/06cce4935f0d47acab94c65d2036d4b7/: meta.yaml
mlruns/307744178423469694/0727b8cecad84b79b2cb987cbda212b3/: meta.yaml
mlruns/307744178423469694/0bd13de029f64d3ca74ff996a7381ce1/: meta.yaml
mlruns/307744178423469694/0d6ffe01dae1413dace8eb73a4172800/: meta.yaml
mlruns/307744178423469694/0da7af952a174ae3bcfe14bbdd0ffa7b/: meta.yaml
mlruns/307744178423469694/0ea6aab1f3194f97a7cc99f9a94017cb/: meta.yaml
mlruns/307744178423469694/0f59970f3f4447ddbcaf2f054258938c/: meta.yaml
mlruns/307744178423469694/0f6cc44f5b6f47f58d62db60d43c1cfb/: meta.yaml
mlruns/307744178423469694/11e45709493743b4b5d78dd5c5292794/: meta.yaml
mlruns/307744178423469694/14c4dafe7ed341ba8853e39059f6e1ca/: meta.yaml
mlruns/307744178423469694/17d9a25ea3204d209b8d1b99b38617fb/: meta.yaml
mlruns/307744178423469694/1af78f4b28304446990253c706d72db0/: meta.yaml
mlruns/307744178423469694/1b53bb099afa44e6a1b0e1d40ab4e6ae/: meta.yaml
mlruns/307744178423469694/1e61fee84cba4e68a5bed6c725fdc95e/: meta.yaml
mlruns/307744178423469694/1f27c3af41af446bb15fa0ceefc2407c/: meta.yaml
mlruns/307744178423469694/1f2d34c22ea840c4b1a495a000a9f657/: meta.yaml
mlruns/307744178423469694/20a9bd352f5144d7a06e651505ef2635/: meta.yaml
mlruns/307744178423469694/20ac15cc142e4bd1a97ebc2319e1094d/: meta.yaml
modeling/config/: config.yaml
modeling/src/: data_loader.py  main.py  preprocessor.py  utils.py  visualization.py
models/: lda_model.pkl  nmf_model.pkl
notebooks/: eda.ipynb  nmf_topics_15.txt  nmf_topics_5.txt  topic_modeling.ipynb
parsing/: telegram-parser.py
src/parsing/: telegram-parser.py
(+625 files in other folders)
