[project]
name = "aviation-topic-pipeline"
version = "0.1.0"
description = "Thematic modeling of posts from aviation Telegram channels"
authors = [
    {name = "Aleksandr Tokmashov",email = "atokmasov.71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "mlflow (>=3.6.0,<4.0.0)",
    "dvc (>=3.64.0,<4.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "dvc-gdrive (>=3.0.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "pymorphy3 (>=2.0.6,<3.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
